# aura-intelligent-answers-module

./: .env.example  .gitignore  GUIA_IMPLEMENTACAO.md  IMPLEMENTATION_SUMMARY.txt  MANIFEST.in  Makefile  QUICKSTART.md  README.md  config.example.json  examples.py  main.py  pyproject.toml  requirements.txt  setup.py
src/aura_ia/: __init__.py
src/aura_ia/core/: __init__.py  ai_provider.py  logger.py  processor.py
src/aura_ia/providers/: __init__.py  gemini_provider.py  gpt_provider.py
src/aura_ia/utils/: __init__.py  config.py  exceptions.py
tests/: __init__.py  test_ai_provider.py  test_config.py  test_exceptions.py
